Annotations, Readme update
