# app/Http/Controllers/Api/GameController.php
@@ -2,8 +2,8 @@
 
 namespace App\Http\Controllers\Api;
 
-use App\Services\RandomPeopleGameResolver;
-use App\Services\RandomStarshipsGameResolver;
+use App\Services\RandomGame\RandomPeopleGameResolver;
+use App\Services\RandomGame\RandomStarshipsGameResolver;
 use App\Transformers\GameResultTransformer;
 use Spatie\Fractalistic\ArraySerializer;
 
@@ -20,7 +20,22 @@ class GameController extends ApiController
     }
 
     /**
-     * @param RandomStarshipsGameResolver $game
+     * @OA\Post(
+     *      path="/api/play/starships",
+     *      operationId="play-starships",
+     *      tags={"play"},
+     *      summary="New game between startships",
+     *      description="Fetches two random starships and outputs the winner",
+     *      @OA\RequestBody(@OA\JsonContent()),
+     *      @OA\Response(
+     *          response=200,
+     *          description="successful operation",
+     *          @OA\JsonContent()
+     *       ),
+     *       @OA\Response(response=400, description="Bad request", @OA\JsonContent())
+     *     )
+     *
+     * @param \App\Services\RandomGame\RandomStarshipsGameResolver $game
      * @return \Spatie\Fractal\Fractal
      */
     public function playRandomStarships(RandomStarshipsGameResolver $game)
@@ -31,7 +46,22 @@ class GameController extends ApiController
 
 
     /**
-     * @param RandomPeopleGameResolver $game
+     * @OA\Post(
+     *      path="/api/play/people",
+     *      operationId="play-people",
+     *      tags={"play"},
+     *      summary="New game between people",
+     *      description="Fetches two random people and outputs the winner",
+     *      @OA\RequestBody(@OA\JsonContent()),
+     *      @OA\Response(
+     *          response=200,
+     *          description="successful operation",
+     *          @OA\JsonContent()
+     *       ),
+     *       @OA\Response(response=400, description="Bad request", @OA\JsonContent())
+     *     )
+     *
+     * @param \App\Services\RandomGame\RandomPeopleGameResolver $game
      * @return \Spatie\Fractal\Fractal
      */
     public function playRandomPeople(RandomPeopleGameResolver $game)
